@@ -1,5 +1,3 @@
-addCommandAlias("dist", ";riffRaffArtifact")
-
 import play.sbt.PlayImport.PlayKeys._
 
 name := "path-manager"
@@ -8,19 +6,33 @@ resolvers += "Typesafe repository" at "https://repo.typesafe.com/typesafe/releas
 
 version := "1.0"
 
-val awsVersion = "1.12.129"
+val awsVersion = "1.12.583"
 
 lazy val dependencies = Seq(
   "com.amazonaws" % "aws-java-sdk-dynamodb" % awsVersion,
   "com.amazonaws" % "aws-java-sdk-cloudwatch" % awsVersion,
   "com.amazonaws" % "aws-java-sdk-ec2" % awsVersion,
-  "org.apache.commons" % "commons-lang3" % "3.11",
-  "net.logstash.logback" % "logstash-logback-encoder" % "6.6",
-  "ch.qos.logback" % "logback-core" % "1.2.7",
-  "ch.qos.logback" % "logback-classic" % "1.2.7",
-  "org.scalatestplus.play" %% "scalatestplus-play" % "5.1.0" % "test",
+  "org.apache.commons" % "commons-lang3" % "3.14.0",
+  "net.logstash.logback" % "logstash-logback-encoder" % "7.3",
+  "org.scalatestplus.play" %% "scalatestplus-play" % "7.0.1" % "test",
   "com.whisk" %% "docker-testkit-scalatest" % "0.9.9" % "test",
-  "com.whisk" %% "docker-testkit-impl-spotify" % "0.9.9" % "test"
+
+  // By default, logstash-logback-encoder will tell jackson to dynamically discover all available jackson modules
+  // on the classpath by calling objectMapper.findAndRegisterModules()
+  // If jackson-module-jaxb-annotations is on the classpath, jackson will try to register it and fail because
+  // javax.xml.bind:jaxb-api is missing. This was not an issue before Java 9, because javax.xml.bind:jaxb-api was
+  // included in the JDK
+  //
+  // The options to solve this were either to add javaxb-api as a dependency, or to exclude jackson-module-jaxb-annotations.
+  // We chose the latter because it is a smaller change and does not introduce a new dependency.
+  //
+  // See https://github.com/logfellow/logstash-logback-encoder/issues/1005
+
+  "com.whisk" %% "docker-testkit-impl-spotify" % "0.9.9" % "test" exclude("com.fasterxml.jackson.module", "jackson-module-jaxb-annotations"),
+
+  // docker-testkit-impl-spotif depends on jnr-unixsocket:0.18, which doesn't support M1 silicon
+  // see https://github.com/spotify/docker-client/pull/1221 (unmerged at present)
+  "com.github.jnr" % "jnr-unixsocket" % "0.38.22" % "test" exclude("com.fasterxml.jackson.module", "jackson-module-jaxb-annotations")
 )
 
 enablePlugins(DockerCompose)
@@ -41,10 +53,9 @@ lazy val pathManager = project.in(file("path-manager"))
       "-J-XX:MaxMetaspaceSize=500m",
       "-J-XX:+UseConcMarkSweepGC",
       "-J-XX:+PrintGCDetails",
-      "-J-XX:+PrintGCDateStamps",
       s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
     ),
-    debianPackageDependencies := Seq("openjdk-8-jre-headless"),
+    debianPackageDependencies := Seq("java11-runtime-headless"),
     maintainer := "Editorial Tools Developers <digitalcms.dev@theguardian.com>",
     packageSummary := description.value,
     packageDescription := description.value,
@@ -56,8 +67,6 @@ lazy val pathManager = project.in(file("path-manager"))
     name := "path-manager",
     playDefaultPort := 10000,
     libraryDependencies ++= dependencies,
-    //Necessary to override jackson-databind versions due to AWS and Play incompatibility
-    dependencyOverrides += "com.fasterxml.jackson.core" % "jackson-databind" % "2.11.4",
     Universal / packageName := normalizedName.value,
     Universal/ topLevelDirectory := Some(normalizedName.value),
   )
